fixed spacing issue in rides index

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -82,6 +82,16 @@ input, select, textarea {
     padding: 1.2em;
   }
 
+  #add {
+    margin-top: 1em;
+  }
+
+  section, p {
+    padding: 1em;
+  }
+
+
+
 	html {
 		box-sizing: border-box;
 	}
